--- a/client/src/index.css
+++ b/client/src/index.css
@@ -782,7 +782,7 @@ border-radius: 1rem;
   .graph {
     position:relative;
     margin-top: calc(-18.5rem);
-    margin-left: calc(-.5rem);
+    margin-left: calc(.1rem);
     width:1200px;
     /* z-index: -1; */
     height: 100vh;
