--- a/client/src/index.css
+++ b/client/src/index.css
@@ -366,9 +366,9 @@ input:focus {
    text-transform: uppercase;
   background-image: linear-gradient(
     -225deg,
-    #f5c7bcbf 0%,
-    #c1998f 29%,
-    white 67%,
+    #e6fdffea 0%,
+    #7a5e57 29%,
+    #4d332d 67%,
     #f5c7bcbf 100%
   );
   background-size: auto auto;
@@ -379,7 +379,7 @@ input:focus {
   text-fill-color: transparent;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  animation: textclip 4s linear infinite;
+  animation: textclip 8s linear infinite;
   display: inline-block;
 
 }
