--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,6 +41,7 @@
 html,
 body {
   min-height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -84,11 +85,11 @@ body {
 }
 
 .graph {
-  margin-top: calc(-6rem);
+  margin-top: calc(-68rem);
   margin-left: calc(9.5rem);
   /* margin-right: calc(80rem); */
-  z-index: -6;
-  position:relative;
+  z-index: -1;
+  /* position:relative; */
   /* margin-top: calc(-18.5rem); */
   /* margin-left: calc(-29.5rem); */
   /* width:1200px; */
@@ -114,10 +115,11 @@ body {
 
 .full {
     margin-top: calc(-5.5rem);
-    height: 80vh;
-    position:absolute;
+    height: 100vh;
+    /* position:absolute; */
     /* margin-right: calc(50rem); */
-    margin-left: calc(9.5rem);
+    margin-left: calc(25.5rem);
+    z-index: 1;
 }
 
 h1,
@@ -322,19 +324,15 @@ form {
   list-style: none;
 }
 
-.submit {
+/* .submit {
   background-color:var(--sand);
   border-color: var(var(--orch));
-}
+} */
 
 .input {
   border-color: var(var(--orch));
 }
 
-.fit {
-  height: 30%;
-  
-}
 
 input {
   font-size: 1rem;
@@ -383,7 +381,8 @@ input:focus {
   -webkit-text-fill-color: transparent;
   animation: textclip 8s linear infinite;
   display: inline-block;
-
+  font-weight: 1000;
+  z-index:3;
 }
 
 @keyframes textclip {
@@ -636,7 +635,6 @@ hr {
 .start {
   position: relative;
   text-align: center;
-  color: var(--sand);
   border-radius: 2rem;
   margin-top: calc(-1rem); 
   background-color: transparent;
@@ -644,6 +642,7 @@ hr {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  z-index:5;
 }
 
 .ack {
