--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,13 +5,14 @@
   --light: #fafafa;
   --dark: #272f32;
   --error: rgb(228, 46, 1);
-  --spacing-one: calc(1rem * 0.5);
-  --spacing-two: calc(1rem);
-  --spacing-three: calc(2rem);
-  --spaceing-four: calc(3rem);
-  --brown:#4d332d;
-  --lightbrown:#7a5e57;
-  --me:#c1998f;
+  --spacing-one:calc(1rem* 0.5rem);
+  --spacing-two:calc(1rem);
+  --spacing-three:calc(2rem);
+  --spacing-four:calc(3rem);
+
+  --brown:rgb(77, 51, 45);
+  --lightbrown:rgb(122, 94, 87);
+  --me:rgb(193, 153, 143);
   --darkbrown:#260e04;
   --sand:#bc6039;
   --orch:#d98f45;
@@ -20,7 +21,7 @@
   --lemon:rgb(248, 218, 48);
   --offwhite:#e6fdffea;
   --greenWash:rgb(66, 151, 130);
-  --nav:#f5c7bcbf;
+  --nav:rgba(245, 199, 188, 0.749);
   --purple: rgba(116, 107, 239, 0.8);
   --fire:#ed4a3bcc;
   --blue: #66aee6;
@@ -33,6 +34,7 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Rock+Salt&family=Source+Serif+4&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&family=Rock+Salt&family=Source+Serif+4&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@500;600;700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -87,14 +89,7 @@ body {
 .graph {
   margin-top: calc(-68rem);
   margin-left: calc(9.5rem);
-  /* margin-right: calc(80rem); */
   z-index: -1;
-  /* position:relative; */
-  /* margin-top: calc(-18.5rem); */
-  /* margin-left: calc(-29.5rem); */
-  /* width:1200px; */
-  /* z-index: -1; */
-  /* height: 90vh; */
 }
 
 .dline {
@@ -134,6 +129,9 @@ h6 {
   line-height: 1.25;
   font-family: 'Source Serif 4', sans-serif;
   color: white;
+  font-family: 'Cinzel', serif;
+  letter-spacing: 3px;
+  word-spacing: 2px;
 }
 
 h1 {
@@ -143,6 +141,9 @@ h1 {
 
 h2 {
   font-size: 2rem;
+  letter-spacing: 4px;
+  word-spacing: 2px;
+
 }
 
 h3 {
@@ -274,9 +275,9 @@ button[disabled] {
 /* CSS */
 .button-74 {
   background-color: #fbeee0;
-  border: 2px solid #422800;
+  /* border: 2px solid var(--brown); */
   border-radius: 30px;
-  box-shadow: #422800 4px 4px 0 0;
+  box-shadow: var(--brown) 4px 4px 0 0;
   color: #422800;
   cursor: pointer;
   /* display: inline-block; */
@@ -296,7 +297,7 @@ button[disabled] {
 }
 
 .button-74:active {
-  box-shadow: #422800 2px 2px 0 0;
+  box-shadow: var(--brown) 2px 2px 0 0;
   transform: translate(2px, 2px);
 }
 
@@ -324,15 +325,9 @@ form {
   list-style: none;
 }
 
-/* .submit {
-  background-color:var(--sand);
-  border-color: var(var(--orch));
-} */
-
 .input {
   border-color: var(var(--orch));
 }
-
 
 input {
   font-size: 1rem;
@@ -359,6 +354,7 @@ input:focus {
 
 .mb {
   margin-right: 17vh;
+  
 }
 
 .animate-charcter
@@ -383,6 +379,7 @@ input:focus {
   display: inline-block;
   font-weight: 1000;
   z-index:3;
+  
 }
 
 @keyframes textclip {
@@ -427,14 +424,13 @@ input:focus {
 }
 
 .container {
-  width: 85%;
-  max-width: 1200px;
+  width: 95%;
+  /* max-width: 1200px; */
   margin-left: auto;
   margin-right: auto;
   background-color: var(--darkbrown);
   border: none;
   color:white;
-
 }
 
 .flex-row {
@@ -576,7 +572,8 @@ input:focus {
 
 /* Photo for About Page */
 .top {
-  margin-top: calc(-8rem);
+  margin-top: calc(-55rem);
+  margin-right:60%;
 }
 
 /* Artist bio title */
@@ -586,7 +583,7 @@ input:focus {
 /* Photo for ArtBio page */
 .float-leftt {
   margin-right:60%;
-  /* margin-top: calc(-50rem); */
+  margin-top: calc(-50rem);
   overflow-x: hidden;
   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
   overflow-y: hidden;
@@ -795,6 +792,10 @@ border-radius: 1rem;
 
 
   /* Photo for ArtBio age */
+.top {
+  margin-top: calc(-15rem);
+}
+/* Photo for artBio */
 .float-leftt {
   margin-top: calc(0rem);
   overflow-x: hidden;
