--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,8 @@
   --brown:rgb(77, 51, 45);
   --lightbrown:rgb(122, 94, 87);
   --me:rgb(193, 153, 143);
-  --darkbrown:#260e04;
+  --pltbrown:rgb(208, 182, 175);
+  --darkbrown:rgb(38, 14, 4);
   --sand:#bc6039;
   --orch:#d98f45;
   --light:#fff1b7ea;
@@ -360,32 +361,38 @@ input:focus {
 
 .mb {
   margin-right: 17vh;
-  
-}
-
-.animate-charcter
-{
-   text-transform: uppercase;
-  background-image: linear-gradient(
-    -225deg,
-    #e6fdffea 0%,
-    #7a5e57 29%,
-    #4d332d 67%,
-    #f5c7bcbf 100%
-  );
-  background-size: auto auto;
-  /* background-clip: border-box; */
-  background-size: 200% auto;
-  color: #fff;
-  background-clip: text;
-  text-fill-color: transparent;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: textclip 8s linear infinite;
-  display: inline-block;
+  text-transform: uppercase;
+  color: white;
   font-weight: 1000;
   z-index:3;
-  
+  color:var(--sand);
+  text-shadow: var(--darkbrown) 2px 2px 2px,
+  var(--brown) 2.2px 2.2px 2.2px,
+  var(--lightbrown) 2.5px 2.5px ,
+  var(--lightbrown) 2.5px 2.5px ,
+  var(--lightbrown) 2.5px 2.5px ,
+  var(--lightbrown) 3px 3px ,
+  var(--lightbrown) 3px 3px ,
+  var(--nav) 2px 2px 2px;
+  margin-left:55%;
+}
+
+.titles {
+  color:#b28478;
+  text-shadow: var(--brown) 2px 2px 2px ;
+  text-transform: uppercase;
+  font-weight: 1000;
+  z-index:3;
+  color:var(--sand);
+  text-shadow: var(--darkbrown) 2px 2px 2px,
+  var(--brown) 2.2px 2.2px 2.2px,
+  var(--lightbrown) 2.5px 2.5px ,
+  var(--lightbrown) 2.5px 2.5px ,
+  var(--lightbrown) 2.5px 2.5px ,
+  var(--lightbrown) 3px 3px ,
+  var(--lightbrown) 3px 3px ,
+  var(--nav) 2px 2px 2px;
+
 }
 
 @keyframes textclip {
@@ -546,27 +553,25 @@ input:focus {
 
 /* Main Page Photo */
 
-.from{
-  margin-top: -12rem;
-  background-color: rgb(77, 51, 45, 0.6);
-  text-align: left;
-  width: 25%;
-  margin-right:28rem;
-}
-
-.product {
-  
-}
-
 .glow {
   box-shadow: 1px -6px 46px -4px rgba(188,96,57,0.68);
   -webkit-box-shadow: 1px -6px 46px -4px rgba(188,96,57,0.68);
   -moz-box-shadow: 1px -6px 46px -4px rgba(188,96,57,0.68);
 }
+
+.from{
+  margin-top: -16rem;
+  text-align: left;
+  width: 25%;
+  margin-left:60rem;
+  background-color: rgb(38, 14, 4, 0.85);
+  position:absolute;
+}
+
 /* main menu */
 .float-right {
     position:absolute;
-    margin-right: 6.5%;
+    /* margin-right: 6.5%; */
     margin-left:55%;
     text-align: start;
     margin-top: calc(4rem);
@@ -629,7 +634,6 @@ input:focus {
   padding: 10%;
 }
 
-
 hr {
   color: var(--lightbrown);
   width: 85%;
@@ -638,25 +642,22 @@ hr {
   margin-right: auto;
 }
 
-.float-right a {
-  color: var(--orch);
-}
-
 .orch {
  color: var(--orch);
 }
 
 .start {
   position: relative;
-  text-align: center;
+  /* text-align: left; */
   border-radius: 2rem;
   margin-top: calc(-1rem); 
   background-color: transparent;
-  width: 85%;
+  /* width: 85%;
   max-width: 1200px;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto; */
   z-index:5;
+  margin-left: 51.5%;
 }
 
 .ack {
@@ -697,7 +698,7 @@ border-radius: 1rem;
 }
 
 .shade {
-  background-color:rgb(38, 14, 4, 0.8);
+  background-color:rgb(38, 14, 4, 0.85);
 }
 
 .error-text {
@@ -760,7 +761,7 @@ border-radius: 1rem;
   }
 
   .full {
-    margin-top: calc(-6.5rem);
+    margin-top: calc(-5.6rem);
     height: 95vh;
     position: relative;
     margin-left: calc(0rem);
@@ -768,19 +769,33 @@ border-radius: 1rem;
 
 .from{
   margin-top: -10.7rem;
-  background-color: rgb(77, 51, 45, 0.8);
+  background-color: rgb(38, 14, 4, 0.85);
   text-align: left;
   width: 100%;
-  margin-right:0rem;
+  margin-right:28rem;
+  margin-left:0%;
 }
 
 .start {
   z-index:2;
+  position: relative;
+  text-align: center;
+  border-radius: 2rem;
+  margin-top: calc(-1rem); 
+  background-color: transparent;
+  width: 85%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  z-index:5;
 }
 
   .mb {
     margin-right: 7.5vh;
+    z-index:-3;
+    margin-left: 0%;
   }
+
   /* main cover page */
 .bottom {
   height: max-content;
@@ -796,7 +811,7 @@ border-radius: 1rem;
     margin-left: 13rem;
     margin-top: calc(4rem);
     position:absolute;
-    color: var(--sand);
+    /* color: var(--sand); */
     font-size: 5px;
     z-index:  2;
   }
@@ -838,7 +853,7 @@ border-radius: 1rem;
   overflow-y: hidden;
 }
 
-/* .animate-charcter {
+/* .titles {
   font-size: 3vh;
 } */
 
