--- a/client/src/index.css
+++ b/client/src/index.css
@@ -203,9 +203,9 @@ header a:hover {
   color:var(--pink);
 }
 
-.col {
+/* .col {
   margin-right:6.5%;
-}
+} */
 
 .banner {
   justify-content: center;
@@ -229,7 +229,7 @@ nav button {
 button {
   font-size: 1rem;
   text-decoration: none;
-  padding: 0.25rem 1rem;
+  /* padding: 0.25rem 1rem; */
   border-radius: .5rem;
   border: none;
   outline: none;
@@ -289,7 +289,7 @@ button[disabled] {
   cursor: pointer;
   /* display: inline-block; */
   font-weight: 600;
-  font-size: 18px;
+  font-size: 16px;
   padding: 0 14px;
   line-height: 50px;
   text-align: center;
@@ -310,8 +310,8 @@ button[disabled] {
 
 @media (min-width: 768px) {
   .button-74 {
-    min-width: 120px;
-    padding: 0 25px;
+    min-width: 100px;
+    padding: 0 10px;
   }
 }
 /* image  */
@@ -336,12 +336,15 @@ form {
 input {
   border: none;
   background-color: transparent;
+  color: white;
 }
 
 textarea {
   border: none;
   background-color: transparent;
+  color: white;
 }
+
 
 textarea:focus {
   border: none;
@@ -726,8 +729,7 @@ border-radius: 1rem;
   color: var(--darkbrown);
 }
 
-
-.box{
+/* .box{
   background-color: var(--brown);
   color: white;
 }
@@ -736,7 +738,7 @@ border-radius: 1rem;
   background-color: rgb(77, 51, 45, 0.6);
   color: white;
   overflow:hidden;
-}
+} */
 
 .pro {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, 
