--- a/client/src/index.css
+++ b/client/src/index.css
@@ -229,17 +229,16 @@ nav button {
 button {
   font-size: 1rem;
   text-decoration: none;
-  /* padding: 0.25rem 1rem; */
   border-radius: .5rem;
   border: none;
   outline: none;
   cursor: pointer;
   margin: 0 1px;
   background-color: var(--secondary);
-  background-color: rgb(123, 94, 87, 0.9);
+  background-color: transparent;
   border-radius: 2rem;
-  box-shadow: 0px 0px 8px 0px var(--me);
-  color:var(--darkbrown);
+  /* box-shadow: 0px 0px 8px 0px var(--me); */
+  /* color:var(--darkbrown); */
 }
 
 button:hover {
@@ -266,7 +265,14 @@ button:hover {
   border-radius: 2rem;
   box-shadow: 0px 0px 8px 0px var(--me);
   color:var(--darkbrown);
-  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, 
+  rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, 
+  rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, 
+  rgba(0, 0, 0, 0.06) 0px 2px 1px, 
+  rgba(0, 0, 0, 0.09) 0px 4px 2px, 
+  rgba(0, 0, 0, 0.09) 0px 8px 4px, 
+  rgba(0, 0, 0, 0.09) 0px 16px 8px, 
+  rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 button:hover {
@@ -587,8 +593,8 @@ input:focus {
   margin-left:39.7rem;
   background-color: rgb(38, 14, 4, 0.85);
   position:absolute;
-  border-top: solid 3px  var(--blue);
-  border-bottom: solid 3px  var(--blue);
+  border-top: solid 3px  var(--lightbrown);
+  border-bottom: solid 3px  var(--lightbrown);
 }
 
 /* main menu */
