--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,7 @@
   --lightbrown:rgb(122, 94, 87);
   --me:rgb(193, 153, 143);
   --pltbrown:rgb(208, 182, 175);
-  --darkbrown:rgb(38, 14, 4);
+  --darkbrown:#260e04;
   --sand:#bc6039;
   --orch:#d98f45;
   --light:#fff1b7ea;
@@ -66,7 +66,7 @@ body {
   height: 40px;
 }
 
-.graphic {
+/* .graphic {
   position: absolute;
   top:-450%; 
   right:5%;
@@ -100,7 +100,7 @@ body {
   padding:1%;
   opacity: .6;
   z-index: 0;
-}
+} */
 
 /* .full {
     margin-top: calc(-5.5rem);
@@ -382,23 +382,47 @@ input:focus {
 .mb {
   /* margin-right: 17vh; */
   text-transform: uppercase;
-  color: white;
-  font-weight: 1000;
+  /* color: white; */
+  font-weight: bolder;
+  font-size: 50px;
   z-index:3;
-  color:var(--sand);
+  color:transparent;
   text-shadow: var(--darkbrown) 2px 2px 2px,
-  var(--brown) 2.2px 2.2px 2.2px,
-  var(--lightbrown) 2.5px 2.5px ,
-  var(--lightbrown) 2.5px 2.5px ,
-  var(--lightbrown) 2.5px 2.5px ,
-  var(--lightbrown) 3px 3px ,
+  var(--orch) 2.2px 2.2px 2.2px,
+  var(--sand) 2.5px 2.5px 2.5px ,
+  var(--sand) 2.5px 2.5px 2.5px,
+  var(--sand) 2.5px 2.5px 2.5px,
+  var(--purple) 3px 3px ,
   var(--lightbrown) 3px 3px ,
   var(--nav) 2px 2px 2px;
+  text-decoration: underline var(--sand) 2px;
+  margin-left:var(--spacing-two);
   /*   */
 }
 
 .m {
-  margin-right: 14vh;
+  margin-right: 6vh;
+}
+
+.headers {
+  color:transparent;
+  font-weight:bolder;
+  font-size: 30px;
+  text-shadow: var(--darkbrown) 2px 2px 2px,
+  var(--orch) 2.2px 2.2px 2.2px,
+  var(--sand) 2.5px 2.5px 2.5px ,
+  var(--sand) 2.5px 2.5px 2.5px,
+  var(--sand) 2.5px 2.5px ,
+  var(--purple) 3px 3px ,
+  var(--lightbrown) 3px 3px ,
+  var(--nav) 2px 2px 2px;
+  letter-spacing: -0.1rem;
+}
+
+.bi-bar-chart-steps {
+  font-weight:bolder;
+  font-size: 20px;
+  color: var(--sand);
 }
 
 .titles {
@@ -541,6 +565,10 @@ input:focus {
 
 .myb-2 {
   margin-bottom: var(--spacing-two);
+}
+
+.mb-0 {
+  margin-bottom: 0!important;
 }
 
 .px-1 {
